@@ -24,6 +24,8 @@ Changes Since 0.7
     warn and fall back to English.
   - Math support: reStructuredText "math" role and directive,
     ``math`` and ``math_block`` doctree elements.
+  - Decode command line arguments with the locales preferred encoding
+    (to allow, e.g., ``--title=Dornröschen``.
 
 .. _BCP 47: http://www.rfc-editor.org/rfc/bcp/bcp47.txt
 
